syntax = "proto3";
package dotbpe;

option csharp_namespace = "Survey.Protocols";
option optimize_for = SPEED;

option (common_fields) = "client_ip,identity,x_request_id,device_id,device_os,device_name,src_code,app_version,return_message" ; //设置公共字段

import public "dotbpe_option.proto";
import public "message/common.proto";
import public "message/qpaper.proto";


// 什么字段都没有，请求
message SaveAPaperReq{
    string client_ip = 1; //用户端IP
    string identity = 2; // 用户标识
    string x_request_id = 3 ; //请求的唯一标识，用于服务间传递


    int32 qpaper_id = 12 ;
    string user_id = 13; //答卷用户ID
    string remark = 15 ;

    repeated DTOAnswer answers = 16 ; // 答案信息
}


message SaveAPaperRsp{

    string return_message = 1; //返回错误信息


    int32 apaper_id = 3 ; // 保存后的问卷ID
}


// 查询问卷的请求
message QueryAPaperReq{

    string client_ip = 1; //用户端IP
    string identity = 2; // 用户标识
    string x_request_id = 3 ; //请求的唯一标识，用于服务间传递

    string qtext = 11; //主题 模糊搜索
    int32 qpaper_id = 12; //问卷ID
    int32 page = 13 ; //分页索引
    int32 rp = 14 ; //每页记录数
    bool check_role = 15; //检查角色
}

// 查询问卷的列表
message APaperListRsp{


    string return_message = 1; //返回错误信息

    repeated DTOAPaper list = 11 ; // 答卷列表
    int32 total = 15; //每页的记录数
}

// 获取单个问卷的请求
message GetAPaperReq{

    string client_ip = 1; //用户端IP
    string identity = 2; // 用户标识
    string x_request_id = 3 ; //请求的唯一标识，用于服务间传递



    int32 paper_id = 11;// 答卷ID

    bool check_role = 12 ; // 是否校验权限

}

// 包括单个问卷信息的响应
message APaperRsp{

    string return_message = 1; //返回错误信息

    DTOAPaperWithAnswers apaper = 11;
    DTOQPaperWithQuestion qpaper = 12;
}


message GetAPaperStaDetailReq{
    string client_ip = 1; //用户端IP
    string identity = 2; // 用户标识
    string x_request_id = 3 ; //请求的唯一标识，用于服务间传递

    int32 qpaper_id = 11;// 问卷ID
}


message APaperStaDetailRsp{

    string return_message = 1; //返回错误信息

    repeated APaperStaDetail sta_detail = 10 ; //统计信息
}

//---------------------------------请求信息---------------------------------

message DTOAPaper{
    int32 apaper_id = 1 ;
    int32 qpaper_id = 2 ;

    string qpaper_subject = 3 ;
    string qpaper_user_id = 4 ;

    string user_id = 5 ;
    string create_time = 6 ;

    string remark = 7 ;


}

message DTOAPaperWithAnswers{
    int32 apaper_id = 1 ;
    int32 qpaper_id = 2 ;

    string user_id = 5 ;
    string create_time = 6 ;

    string remark = 7 ;

    repeated DTOAnswer answers = 10 ; // 答案信息
}

message DTOAnswer{
    string answer_id = 1 ;
    int32 apaper_id = 2;
    string question_id = 3;
    int32 objective_answer = 4;
    string subjective_answer = 5;
}
