syntax = "proto3";
package Tomato;

option csharp_namespace = "Survey.Protocols";
option optimize_for = SPEED;
import public "Tomato_option.proto";
option (common_fields) = "client_ip,identity,x_request_id,device_id,device_os,device_name,src_code,app_version,return_message" ; //设置公共字段

// 什么字段都没有，请求
message VoidReq{
    string client_ip = 1; //用户端IP
    string identity = 2; // 用户标识
    string x_request_id = 3 ; //请求的唯一标识，用于服务间传递

}

// 只返回默认的返回
message VoidRsp{
   //返回错误信息
   string return_message = 1;
}



message APaperStaDetail {
    //问题id
    string question_id = 10 ;

    //答案统计信息
    repeated int32 oa = 11 ;
}
