syntax = "proto3";
package dotbpe;

option csharp_namespace = "Survey.Protocols";
option optimize_for = SPEED;



import public "dotbpe_option.proto";
import "message/qpaper.proto"; //引入消息，因为部分消息和InnerService共用，所有单独一个文件，如果不共用，可直接定义在这里

option (generic_markdown_doc) = true; //生成接口文档

//-------------这里是服务定义----------------------start-----

// 问卷服务
service QPaperService {

    option (service_id)= 20001 ;//设定服务ID

    rpc SaveQPaper (SaveQPaperReq) returns (SaveQPaperRsp){
        option (message_id)= 1 ;//设定消息ID
        
        option (http_api_option) = {
            path : "/api/qpaper/save",
            method : "post",
            description : "保存问卷信息"
        };
    };

    rpc QueryQPaperList (QueryQPaperReq) returns (QPaperListRsp){
        option (message_id)= 2 ; //设定消息ID
        
        option (http_api_option) = {
            path : "/api/qpaper/query",
            method : "all",
            description : "查询列表"           
        };
    };

    rpc GetQPaper (GetQPaperReq) returns (QPaperRsp){
        option (message_id)= 3 ; //设定消息ID

        option (http_api_option) = {
            path : "/api/qpaper/simple",
            method : "get",
            description : "获取问卷信息"           
        };
    };

    rpc GetQPaperFull (GetQPaperReq) returns (QPaperFullRsp){
        option (message_id)= 4 ; //设定消息ID

        option (http_api_option) = {
            path : "/api/qpaper/get",
            method : "get",
            description : "获取问卷详情信息"            
        };

    };

    rpc AddAPaperCount (AddAPaperReq) returns (VoidRsp){
        option (message_id)= 5 ; //设定消息ID
    };
}

//-------------这里是服务定义----------------------end-----
